// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Container renders expected column styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-1 {
    margin: -16px 16px 0 16px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    margin: -16px 14px 0 14px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin: -16px 10px 0 10px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid Container renders expected max width 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid Container renders expected row styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-1 {
    margin: -0px 8px 0 8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    margin: -4px 8px 0 8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin: -12px 8px 0 8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid Container renders expected styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin: -16px 8px 0 8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    margin: -24px 12px 0 12px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;
